2002-07-28  Ryan Nunn  <triforce@merlin.net.au>
	* pathfinder/path.cc : Fixed seriously broken non hash pathfinding (z 
	  coord was being ignored in comparisons of nodes). This fixes the
	  Monitor Training problem. Probably fixes countless other pathfinding
	  problems too.

2002-07-27  Max Horn  <max@quendi.de>

	* audio/Audio.cc: Replaced the pseudo-breshenham audio interpolation code
	with 'proper' cubic interpolation code.

2002-07-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* monstinf.*: armur? armour! ;-)

2002-07-27  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Call ready_ammo() if NPC needs it.

	* objs/barge.cc (Barge_object): Exit barge mode when you go into
	combat, and lower sails when you exit barge mode.

2002-07-26  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc,objs/flags.h,drag.cc:  In_dungeon flag.
	Also don't assume theft if inside a dungeon.
	* shapeinf.{cc,h},combat.cc,effects.cc:  Not_blocked flag for
	weapons and ammo.

2002-07-26  Aurelien Marchand <artaxerxes@users.sourceforge.net>
	* README.Qtopia: updated
	* imagewin/ibuf8.cc: added a test to prevent fast copy on the zaurus
	* configure.in: added test for $host_vendor under the linux clause
	* shapes/monstinf.*: renamed "arm" into "armur" as "arm" is reserved
	
2002-07-24  Dominik Reichardt  <dominus@users.sourceforge.net>
	* docs/xml/exult_studio.xml: updated
	* docs/exult_studio.html, exult_studio.txt: updated
	
2002-07-24  Dominik Reichardt  <dominus@users.sourceforge.net>
	* exult.cc: little correction of the --help screen (--bg, --si instead of 
	  -bg -si)
	* Readme, FAQ: updated.
	* docs/xml/docs.xml, faq.xml: updated
	* docs/readme.html, faq.html: updated
	
2002-07-24  Jeff Freedman  <jeff@amy.nerble.net>

	* shapeid.cc,vgafile.h,glshape.cc:  Translucent shapes supported
	in OpenGL.
	May not look entirely right, as I had to guess at the colors (in
	'shapeid.cc'; look for 'blends'.)

2002-07-23  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
