@@ -49,7 +49,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #include "shapevga.h"
 #include "Flex.h"
 #include "studio.h"
-#include "dirbrowser.h"
+// #include "dirbrowser.h"
 #include "utils.h"
 #include "u7drag.h"
 #include "shapegroup.h"
